--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/node": "^14.14.31",
+    "@types/redux-form": "^8.3.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "final-form": "^4.20.1",
@@ -17,6 +19,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "typescript": "^4.1.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -24,12 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
