--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "extends": [
+       "react-app",
+       "react-app/jest"
+    ]
+ }, //https://stackoverflow.com/questions/64657876/eslint-error-causing-create-react-app-failed-to-compile
   "browserslist": {
     "production": [
       ">0.2%",
@@ -39,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0"
   }
 }
